refactor: importing new commons web and telegram